# llm-model-picker

./: README.md  pyproject.toml
src/llm_model_picker/: __init__.py  core.py
tests/: test_llm_model_picker.py
